Extend tests and add github actions

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,14 @@ classifiers = [
   "Programming Language :: Python :: 3 :: Only",
 ]
 
+dependencies = [
+    "fastapi",
+    "uvicorn",
+    "requests",
+    "pydantic",
+    "pexpect",
+]
+
 [project.optional-dependencies]
 dev = [
     # "mkdocs-material",
