CI: Coverage to report coverage of lib only
Closes #4

--- a/.github/workflows/pytest.yaml
+++ b/.github/workflows/pytest.yaml
@@ -41,7 +41,7 @@ jobs:
       - name: Run pytest
         uses: sjvrijn/pytest-last-failed@v2
         with:
-          pytest-args: '--cov'
+          pytest-args: '--cov swerex'
       # - name: Explicitly convert coverage to xml
       #   run: coverage xml
       # - name: Upload coverage reports to Codecov
