--- a/.github/workflows/pytest.yaml
+++ b/.github/workflows/pytest.yaml
@@ -32,6 +32,9 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: '3.11'
+      - name: Build docker image
+        run: |
+          ./setup_test_docker.sh
       - name: Install uv
         run: |
           curl -LsSf https://astral.sh/uv/install.sh | sh
