--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -33,6 +33,7 @@ theme:
     - header.autohide
     - announce.dismiss
 markdown_extensions:
+  - sane_lists
   - admonition
   - pymdownx.details
   - pymdownx.superfences
