--- a/.github/workflows/check-links-periodic.yaml
+++ b/.github/workflows/check-links-periodic.yaml
@@ -16,5 +16,6 @@ jobs:
       - uses: actions/checkout@v4
       - uses: tcort/github-action-markdown-link-check@v1
         with:
+          config-file: .github/mlc_config.json
           use-quiet-mode: 'yes'
           use-verbose-mode: 'yes'
