--- a/.github/workflows/check-links-pr.yaml
+++ b/.github/workflows/check-links-pr.yaml
@@ -7,6 +7,7 @@ jobs:
     - uses: actions/checkout@v4
     - uses: tcort/github-action-markdown-link-check@v1
       with:
+        config-file: .github/mlc_config.json
         use-quiet-mode: 'yes'
         use-verbose-mode: 'yes'
         check-modified-files-only: 'yes'
