--- a/pyproject.toml
+++ b/pyproject.toml
@@ -101,6 +101,7 @@ testpaths = [
 ]
 xfail_strict = false
 asyncio_mode = "auto"
+asyncio_default_fixture_loop_scope = "function"
 
 [tool.ruff]
 # Exclude a variety of commonly ignored directories.
