--- a/.github/workflows/release_swerex_remote.yaml
+++ b/.github/workflows/release_swerex_remote.yaml
@@ -14,7 +14,11 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        arch: [x86_64, aarch64]
+        include:
+          - arch: amd64
+            name: amd64
+          - arch: arm64
+            name: aarch64
     
     steps:
     - name: Checkout code
@@ -23,7 +27,7 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
 
-    - name: Build executable in Ubuntu 14.04 container
+    - name: Build executable in compatible container
       run: |
         # Create build script
         cat > build_script.sh << 'EOF'
@@ -49,11 +53,11 @@ jobs:
         uv pip install pyinstaller
         
         # Build executable
-        pyinstaller src/swerex/server.py --onefile --name swerex-remote-$ARCH
+        pyinstaller src/swerex/server.py --onefile --name swerex-remote-$ARCH_NAME
         
         # Make executable and copy to output
-        chmod +x dist/swerex-remote-$ARCH
-        cp dist/swerex-remote-$ARCH /output/
+        chmod +x dist/swerex-remote-$ARCH_NAME
+        cp dist/swerex-remote-$ARCH_NAME /output/
         EOF
         
         chmod +x build_script.sh
@@ -61,21 +65,29 @@ jobs:
         # Create output directory
         mkdir -p output
         
-        # Build using Ubuntu 14.04 with emulation for cross-platform builds
+        # Use different base images for different architectures to maximize compatibility
+        if [ "${{ matrix.arch }}" = "amd64" ]; then
+          # Use Ubuntu 14.04 for AMD64 (maximum compatibility with old systems)
+          BASE_IMAGE="ubuntu:14.04"
+        else
+          # Use Ubuntu 16.04 for ARM64 (first Ubuntu with official ARM64 support)
+          BASE_IMAGE="ubuntu:16.04"
+        fi
+        
         docker run --rm \
-          --platform linux/${{ matrix.arch == 'x86_64' && 'amd64' || 'arm64' }} \
+          --platform linux/${{ matrix.arch }} \
           -v $(pwd):/workspace \
           -v $(pwd)/output:/output \
           -w /workspace \
-          -e ARCH=${{ matrix.arch }} \
-          ubuntu:14.04 \
+          -e ARCH_NAME=${{ matrix.name }} \
+          $BASE_IMAGE \
           bash build_script.sh
 
     - name: Upload build artifacts
       uses: actions/upload-artifact@v4
       with:
-        name: swerex-remote-${{ matrix.arch }}
-        path: output/swerex-remote-${{ matrix.arch }}
+        name: swerex-remote-${{ matrix.name }}
+        path: output/swerex-remote-${{ matrix.name }}
         retention-days: 30
 
   release:
@@ -95,7 +107,7 @@ jobs:
     - name: Prepare release assets
       run: |
         mkdir -p release_assets
-        cp artifacts/swerex-remote-x86_64/swerex-remote-x86_64 release_assets/
+        cp artifacts/swerex-remote-amd64/swerex-remote-amd64 release_assets/
         cp artifacts/swerex-remote-aarch64/swerex-remote-aarch64 release_assets/
         
         # Create checksums
@@ -134,15 +146,15 @@ jobs:
           ${{ steps.release_info.outputs.body }}
           
           ## Download Links
-          - **Linux x86_64**: [swerex-remote-x86_64](https://github.com/${{ github.repository }}/releases/download/${{ steps.release_info.outputs.tag }}/swerex-remote-x86_64)
+          - **Linux AMD64**: [swerex-remote-amd64](https://github.com/${{ github.repository }}/releases/download/${{ steps.release_info.outputs.tag }}/swerex-remote-amd64)
           - **Linux ARM64**: [swerex-remote-aarch64](https://github.com/${{ github.repository }}/releases/download/${{ steps.release_info.outputs.tag }}/swerex-remote-aarch64)
           - **Checksums**: [checksums.txt](https://github.com/${{ github.repository }}/releases/download/${{ steps.release_info.outputs.tag }}/checksums.txt)
           
           ${{ steps.release_info.outputs.type == 'version' && '## Always Latest Links
-          - **Linux x86_64**: [swerex-remote-x86_64](https://github.com/' || '' }}${{ steps.release_info.outputs.type == 'version' && github.repository || '' }}${{ steps.release_info.outputs.type == 'version' && '/releases/latest/download/swerex-remote-x86_64)
+          - **Linux AMD64**: [swerex-remote-amd64](https://github.com/' || '' }}${{ steps.release_info.outputs.type == 'version' && github.repository || '' }}${{ steps.release_info.outputs.type == 'version' && '/releases/latest/download/swerex-remote-amd64)
           - **Linux ARM64**: [swerex-remote-aarch64](https://github.com/' || '' }}${{ steps.release_info.outputs.type == 'version' && github.repository || '' }}${{ steps.release_info.outputs.type == 'version' && '/releases/latest/download/swerex-remote-aarch64)' || '' }}
         files: |
-          release_assets/swerex-remote-x86_64
+          release_assets/swerex-remote-amd64
           release_assets/swerex-remote-aarch64
           release_assets/checksums.txt
         prerelease: ${{ steps.release_info.outputs.prerelease }}
