--- a/.github/workflows/release_swerex_remote.yaml
+++ b/.github/workflows/release_swerex_remote.yaml
@@ -24,6 +24,9 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
 
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v3
+
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
 
@@ -65,14 +68,7 @@ jobs:
         # Create output directory
         mkdir -p output
         
-        # Use different base images for different architectures to maximize compatibility
-        if [ "${{ matrix.arch }}" = "amd64" ]; then
-          # Use Ubuntu 14.04 for AMD64 (maximum compatibility with old systems)
-          BASE_IMAGE="ubuntu:14.04"
-        else
-          # Use Ubuntu 16.04 for ARM64 (first Ubuntu with official ARM64 support)
-          BASE_IMAGE="ubuntu:16.04"
-        fi
+        BASE_IMAGE="ubuntu:14.04"
         
         docker run --rm \
           --platform linux/${{ matrix.arch }} \
